fix: increased margin top of main heading on small screens

--- a/styles.css
+++ b/styles.css
@@ -405,6 +405,7 @@ hr {
     color: rgb(39, 38, 38);
     font-family: 'Courier Prime', monospace;
     font-size: 20px;
+    margin-top: 2.5rem;
 }
 
 
